--- a/pollutionparty.html
+++ b/pollutionparty.html
@@ -40,9 +40,16 @@
             <h2>Proces</h2>
             <p>We hebben tijdens het proces veel iteraties gemaakt, we waren bijvoorbeeld in eerste instantie van plan om er een bordspel van te maken,
                 alleen omdat we de link tussen de kaarten en het bord niet goed op orde konden krijgen hebben we het bord weggelaten.
+                Ook hebben we met sprints gewerkt elke week gingen we aan de slag en ontvingen we aan het einde van de week feedback. 
             </p>
-         </article>
-                
+            <p>Zo bestond week 1 uit vooronderzoek, week 2 uit prototype, en week 3 de afronding</p>
+            <article>
+                <h3>Vooronderzoek</h3>
+                <p>Tijdens deze opdracht hebben we veel vooronderzoek gedaan naar wat voor spelletjes er allemaal zijn en wat maakt het dat zij zo goed zijn. 
+                    Omdat wij iets wilde maken wat nog niet bestond.
+                </p>
+            </article>
+         </article>     
        </section>
         <section>
             <h2>Visueel beeld bij dit project</h2>
