--- a/zoekeenboek.html
+++ b/zoekeenboek.html
@@ -37,12 +37,53 @@
                     ook in die genre thuishoorde. Uiteindelijk als ze alle keuzes hebben gemaakt krijgen ze een overzicht met verschillende genres en boeken die daarbij passen, en kunnen zo 
                 makkelijker een keuze maken. </p>
              </article>
+        </section>
+        <section>
             <article>
                 <h2>Proces</h2>
                  <p>Dit ging niet zonder slag of stoot, omdat het visuele beeld van Amsterdam best wel clean en recht toe recht aan is, had ik in eerste
                     instantie moeite met het aantrekkelijk maken voor kinderen. Uiteindelijk door feedback te vragen aan andere heb ik veel dingen uitgeprobeerd,
                     waarvan dit design het beste werkte. 
                 </p>
+                <article>
+                    <H3>Stap 1: Indeling maken</H3>
+                    <div>
+                        <img src="images/zoekeenboek-indeling.png" alt="Indeling alle content lo-fi">
+                        <p>De alleerste stap was alles op de pagina's indelen. Wat zet ik waar neer.</p>  
+                    </div>
+                </article>
+                <article>
+                    <h3>Stap 2: Structuur maken</h3>
+                    <div>
+                        <div>
+                            <p>Bij de tweede stap in dit proces was structuur brengen aan het design, dus wat zet ik daar neer en welke gestallt principes ga ik hiervoor gebruiken.
+                                In mijn geval heb ik proximity en consistency gebruikt.
+                            </p>
+                            <p>Daarentegen zie je ook een ander ontwerp, omdat ik tijdens de tweede stap mij meer ben gaan focussen op welke manier ik het voor de 
+                                jongeren aantrekkelijk kan maken en overzichtelijk. En ik kwam er ook achter dat dat eerste design daar niet geschikt voor was. 
+                            </p>
+                        </div>
+                        <img src="images/zoekeenboek-structuur.png" alt="Eerste stap structuur afbeelding met verschillende elementen">
+                    </div>
+                </article>
+                <article>
+                    <h3>Stap 3: Hierarchie aanbrengen</h3>
+                    <div>
+                        <img src="images/zoekeenboek-hierarchie.png" alt="Hierarchie in de lo-fi">
+                         <p>Zoals je kan zien heb ik verschillende elementen toegvoegd, zoals het figuurtje dat lijkt op een ei. Deze kijkt met zijn ogen de richting
+                        op waar de gebruiker naartoe moet kijken. Alleen dit was uiteindelijk nog niet genoeg, dus heb ik het bij het eind design wat duidelijker vormgegeven.
+                          </p> 
+                    </div>
+                </article>
+                <article>
+                    <h3>Verschillende stijlen</h3>
+                    <div>
+                         <p>Daarna heb ik nog een aantal varianten gemaakt met verschillende stijlen, om zo te kunnen kijken welke het beste zou zijn voor mijn
+                        deisgn.
+                        </p> 
+                        <img src="images/zoekeenboek-comp-typo-kleuren.png" alt="Verschillende varianten van een bepaalde pagina">
+                    </div>
+                </article>
             </article>
         </section>
         <section>
