--- a/zoekeenboek.html
+++ b/zoekeenboek.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,25 +18,18 @@
         </nav>
     </header>
     <main>
-        <a href="mijnprojecten.html">terug</a>
         <section>
             <div>
             <h1>Zoek een boek</h1>
             <img src="images/zoek-een-boek.png" alt="Afbeelding van het eerste scherm van Zoek een boek, met een aantal boeken en een plant"> 
-            </div>
-           
+             </div>
             <article>
-               <h2>Opdracht</h2>
-                 <p> Tijdens dit project werden wij uitgedaagd om de stijlen van de Amsterdamse website en de bibliotheek te combineren. Wij moesten op een leuke manier jongeren in de onderbouw van de middelbare school 
-                    aansporen/ helpen bij het kiezen van een leesboek.  
-                 </p> 
+                    <h2>Opdracht</h2>
+                    <p>Dit was een opdracht van 5 weken individueel.</p>
+                    <p> Tijdens dit project werden wij uitgedaagd om de stijlen van de Amsterdamse website en de bibliotheek te combineren. Wij moesten op een leuke manier jongeren in de onderbouw van de middelbare school 
+                        aansporen/ helpen bij het kiezen van een leesboek.  
+                    </p> 
             </article>
-            <article>
-                <h2>Idee</h2>
-                <p>Het idee was dat de kinderen stap voor stap een keuze moesten maken in genre met wat hun aanspraken, daarbij komt er steeds een voorbeeld boek tevoorschijn die dan
-                    ook in die genre thuishoorde. Uiteindelijk als ze alle keuzes hebben gemaakt krijgen ze een overzicht met verschillende genres en boeken die daarbij passen, en kunnen zo 
-                makkelijker een keuze maken. </p>
-             </article>
         </section>
         <section>
             <article>
@@ -79,7 +72,7 @@
                     <h3>Verschillende stijlen</h3>
                     <div>
                          <p>Daarna heb ik nog een aantal varianten gemaakt met verschillende stijlen, om zo te kunnen kijken welke het beste zou zijn voor mijn
-                        deisgn.
+                        design.
                         </p> 
                         <img src="images/zoekeenboek-comp-typo-kleuren.png" alt="Verschillende varianten van een bepaalde pagina">
                     </div>
