--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -25,9 +25,9 @@
                 <h2>Hi, ik ben Sabrina Zuurbier</h2>
                 <p>21 jaar</p>
                 <p> Ik zal mijzelf omschrijven als een leergierig, ambiteus en iemand die initiatief zal nemen. Ik vind het leuk om dingen uit te proberen en meer te leren</p>
-                <p> Voor mijn tweede jaar ben ik opzoek naar een stage van tien weken. Bij een bedrijf dat mij een mogelijkheid kan bieden om mij verder te ontwikkelen met coderen, maar ook op visueel vlak.
+                <p> Voor mijn tweede jaar ben ik opzoek naar een stage van tien weken. Bij een bedrijf dat mij een mogelijkheid kan bieden om mij verder te helpen ontwikkelen met coderen, maar ook op visueel vlak.
                     Graag zoek ik een plek die mij deze begeleiding kan bieden en natuurlijk een gezellige sfeer heeft.</p>
-                <p>Zelf ben ik graag bezig met mijn handen en vind ik het ontzettend leuk om te tekenen en te verven. Ook probeer ik mij verder te ontwikkelen op het gebied van fotografie en loop daarom ook regelmatig met 
+                <p>Zelf ben ik graag bezig met mijn handen en vind ik het ontzettend leuk om te tekenen en te schilderen met aquarel verf. Ook probeer ik mij verder te ontwikkelen op het gebied van fotografie en loop daarom ook regelmatig met 
                     een professionele fotograaf mee.
                 </p>  
             </div>
