--- a/index.html
+++ b/index.html
@@ -73,17 +73,15 @@
           </section>
     </main>
     <footer>
-        <ul>
+        <!-- <ul>
             <li><a href="index.html"></a>Homepage</li>
             <li><a href="contact.html"></a>About me</li>
             <li><a href="mijnprojecten.html"></a>Projecten</li>
-        </ul>
-        <ul>
+        </ul> -->
             <!-- Target zorgt ervoor dat er een nieuwe window geopent word -->
-            <li><a class="linkedinicon" target="_blank" href="https://www.linkedin.com/in/sabrina-z-400316205?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app
-                " rel="https://nl.linkedin.com/"><img src="images/linkedin-icon.png" alt="linkedin icoon"></a></li>
-            <li>Created by: Sabrina Zuurbier</li>
-        </ul>
+           <a class="linkedinicon" target="_blank" href="https://www.linkedin.com/in/sabrina-z-400316205?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app
+                " rel="https://nl.linkedin.com/"><img src="images/linkedin-icon.png" alt="linkedin icoon"></a>
+            <p>Created by: Sabrina Zuurbier</p>
     </footer>
 </body>
 </html>
