--- a/mojo.html
+++ b/mojo.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,10 +18,11 @@
         </nav>
     </header>
     <main>
-        <a href="mijnprojecten.html">terug</a>
        <section>
-         <h1>Recreating the mojo website</h1>
-        <img src="images/mojo-landscape.png" alt="Mojo site maar dan lanscape op laptop scherm">
+        <div>
+            <h1>Recreating the mojo website</h1>
+            <img src="images/mojo-landscape.png" alt="Mojo site maar dan lanscape op laptop scherm">
+        </div>
          <article>
             <h2>Opdracht</h2> 
             <p>
@@ -30,29 +31,47 @@
             dit omdat het goed is voor mijn ontwikkeling als ik verder wil met frond end development. 
             * Alle code die ik hiervoor heb gebruikt komt van de site mojo en is dus geen eigen content geweest.
             </p>
+            <p> Het ging er dan ook om tijdens dit project dat wij coderen meer onder de knie kregen en meer met verschillende selectoren aan de slag konden gaan.</p>
             <p>
-                Daarmaast hebben wij tijdens dit vak gebrukt gemaakt van de screenreader en hoe toegankelijk een website is.
+            Daarnaast hebben wij tijdens dit vak gebruik gemaakt van de screenreader en hoe toegankelijk een website is.
             </p>
             </article>
-            <article>
-                 <h2>Idee</h2>
-                 <p>Als extra toevoegingen had ik om een has selector te gebruiken en daar dan een leuke animatie aan toe te voegen. Nu als je bij genres en dan disco aanvinkt dan
-                    krijgt de achtergond een gradient animatie.
-                 </p>
-            </article>
+        </section>
+        <section>
             <article>
                 <h2>Proces</h2>
                 <p>
                 Het lastigste vond ik dat zodra er een fout in de code staat of je wilde iets veranderen, maar dat dat niet meteen werkte. Ik moet mij daar nog een weg in vinden en
                 natuurlijk veel oefenen door code te blijven schrijven, zodat ik er bekender in word.
                 </p>
+                <article>
+                    <h3>Breakdownschets</h3>
+                    <div>
+                        <img src="images/breakdownschets.jpg" alt="Afbeelding van een aantal delen van de breakdownschets">
+                        <p>Voor dit project hebben wij gebruik gemaakt van een breakdownschets die wij zelf moesten maken van de site die wij wilden namaken.</p>
+                    </div>
+                </article>
+                <article>
+                    <h3>Oefenen met codepen</h3>
+                    <div>
+                        <div>
+                            <p>We hebben tijden dit project ook veel gebruik gemaakt van opdrachten die wij hebben gemaakt via codepen, dit vond ik een handige
+                                tool om te gebruiken, omdat je er met het oefenen van coderen makkelijk kan zien wat bepaalde code doet.
+                            </p>
+                            <p>Zo hebben we hiernaast een animatie gemaakt door een class te geven via javascript</p> 
+                        </div>
+                        <video autoplay loop src="images/java-codepenopdracht.mp4" type="video/mp4"></video>
+                    </div>
+                </article>
+                <article>
+
+                </article>
             </article>     
        </section>
         <section>
             <h2>Visueel beeld bij dit project</h2>
-            <p>Bekijk de gehele site door hieronder op de afbeelding te klikken</p>
-            <img src="images/mockup-mojo.png" alt="Mockups met daarin de site ">
             <a target="_blank" href="https://sabrinaz35.github.io/blok-web-sabrina/"  rel="https://github.com/">Check hier de site</a>
+            <img src="images/mockup-mojo.png" alt="Mockups met daarin de site ">
         </section>
     </main>
     <footer>
