--- a/pollutionparty.html
+++ b/pollutionparty.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,7 +18,6 @@
         </nav>
     </header>
     <main>
-        <a href="mijnprojecten.html">terug</a>
        <section>
         <div>
             <h1>Pollutionparty</h1>
@@ -26,8 +25,17 @@
         </div>
          <article>
             <h2>Opdracht</h2>
-            <p>Pollution party was een groepsopdracht waarbij wij al onze kwaliteiten moesten gaan combineren en daar een fysiek product mee maken.
+            <p>Pollution party was ons idee wat onder het vak Passie project viel, waarbij wij al onze kwaliteiten moesten gaan combineren en daar een fysiek product mee maken.
                 Daarbij was het ook de bedoeling om een bepaalde waarde aan toe te voegen en in dit geval was dit voornamelijk ecologische waarde.</p>
+            <p>Dit was een project waar wij 3 weken in groepsverband aan hebben gewerkt (4personen).</p>
+            <h3>Mijn taken</h3>
+            <p>Los van de gezamelijke brainstormsessies waren mijn taken:</p>
+            <ul>
+                <li>Illustraties maken voor op de kaarten gemaakt</li>
+                <li>Idee pitchen bij een spel verkoper, voor feedback</li>
+                <li>De spelregels uitschrijven</li>
+                <li>Bijpassende poster maken met de slogan</li>
+            </ul>
          </article>
          <article>
             <h2>Idee</h2>
@@ -46,16 +54,34 @@
             <article>
                 <h3>Vooronderzoek</h3>
                 <p>Tijdens deze opdracht hebben we veel vooronderzoek gedaan naar wat voor spelletjes er allemaal zijn en wat maakt het dat zij zo goed zijn. 
-                    Omdat wij iets wilde maken wat nog niet bestond.
+                    Omdat wij iets wilde maken wat nog niet bestond. Daarvoor hebben we veel brainstorm sessies gehouden.
                 </p>
+                <p>Uiteindelijk hadden we een idee alleen we kwamen er ook niet helemaal uit de spelregels en hoe de kaarten gecombineerd moesten worden met het bordspel, dus hadden we besloten om over te stappen naar alleen een kaartspel
+                </p>
+            </article>
+            <article>
+                <h3>Versie 1 + testen</h3>
+                <img src="images/prototype1-test.png" alt="Testen van het eerste spel kaarten">
+                <p>We hadden eerst een low-fidelity kaarten gemaakt, zodat wij ons concept konden gaan testen</p>
+                <p>Hier bleek uit dat de gehele puntentelling nog niet klopte, of je de kaarten meteen op moest leggen, de naam van de kaartset stond er niet op.</p>
+                <p>Dit waren allemaal cruciale inzichten om het spel wel goed te kunnen laten lopen, dus dit hebben we ook meteen opgepakt.</p>
+            </article>
+            <article>
+                <h3>Design van de kaarten</h3>
+                <img src="images/schetsen-van-kaarten-versie1.png" alt="Verschillende schetsen van de kaarten">
+                <p>Zodra ons concept in orde was hebben we gebrainstormd over hoe de kaarten vormgegeven moesten worden en hoe de afbeeldingen eruit moesten zien.
+                Voor de kaarten die ik zou gaan illustreren had ik eerst schetsen een paar schetsen vooraf gemaakt.
+                </p>
+                
+                <img src="images/pollution-2-slides.png" alt="De kaarten die Sabrina heeft geillustreerd">
+                <p>Dit zijn de kaarten uit het spel die ik heb geillustreerd</p>
+            </article>
+            <article>
+                <h3>Terugblik</h3>
+                <p>Als ik op dit project terugblik dan heb ik hier veel uit geleerd, zoals een goede taakverdeling hebben in een groep is cruciaal.</p>
             </article>
          </article>     
        </section>
-        <section>
-            <h2>Visueel beeld bij dit project</h2>
-            <img src="images/pollution-2-slides.png" alt="De kaarten die Sabrina heeft geillustreerd">
-            <p>Dit zijn de kaarten uit het spel die ik heb geillustreerd</p>
-        </section>
     </main>
     <footer>
         <ul>
