--- a/contact.html
+++ b/contact.html
@@ -18,10 +18,10 @@
         </nav>
     </header>
     <main>
-        <h1>About me</h1>
         <section>
             <img src="images/sabrina-met-camera.JPG" alt="Ik met een foto camera">
             <div>
+                <h1>About me</h1>
                 <h2>Hi, ik ben Sabrina Zuurbier</h2>
                 <p>21 jaar</p>
                 <p> Ik zal mijzelf omschrijven als een leergierig, ambiteus en iemand die initiatief zal nemen. Ik vind het leuk om dingen uit te proberen en meer te leren</p>
@@ -30,11 +30,11 @@
                 <p>Zelf ben ik graag bezig met mijn handen en vind ik het ontzettend leuk om te tekenen en te schilderen met aquarel verf. Ook probeer ik mij verder te ontwikkelen op het gebied van fotografie en loop daarom ook regelmatig met 
                     een professionele fotograaf mee.
                 </p>  
+                <div>
+                    <h2>Curriculum vitae</h2>
+                    <a href="/images/cv-sabrina-zuurbier.pdf" download>Download hier</a>
+                </div>
             </div>
-        </section>
-        <section>
-            <h2>Curriculum vitae</h2>
-            <a href="/images/cv-sabrina-zuurbier.pdf" download>Download hier</a>
         </section>
         <!-- <section>
             <h2>contact</h2>
@@ -53,6 +53,7 @@
             <li><a class="linkedinicon" target="_blank" href="https://www.linkedin.com/in/sabrina-z-400316205?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app
                 " rel="https://nl.linkedin.com/"><img src="images/linkedin-icon.png" alt="linkedin icoon"></a></li>
         </ul>
+        <p>Created by: Sabrina Zuurbier</p>
     </footer>
 </body>
 </html>
