--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </ul>
                 <article>
                     <h2>Meer over mij en wat zoek ik?</h2>
-                    <p>Ik ben 21 jarige, tweedejaarsstudent op de opleiding communication and multimedia design. </p>
+                    <p>Ik ben 21 jarige, tweedejaarsstudent op de opleiding communication and multimedia design. En ik ben op zoek naar een stage van tien weken van 14 april tot 4 juli 2025.</p>
                  </article>
              </div>
             <img src="images/sabrina-portret.JPG" alt="foto van mij met sunset">
