--- a/mojo.html
+++ b/mojo.html
@@ -19,22 +19,23 @@
     </header>
     <main>
        <section>
-        <div>
-            <h1>Recreating the mojo website</h1>
-            <img src="images/mojo-landscape.png" alt="Mojo site maar dan lanscape op laptop scherm">
-        </div>
-         <article>
-            <h2>Opdracht</h2> 
-            <p>
-             Voor het vak front end development moesten wij een website uitkiezen en deze zo goed als namaken, er werd van ons verwacht dat wij of de hele site
-            responsive maakte of op gebied van de visuele representatie van de site dingen zouden toevoegen. Ik heb ervoor gekozen om de site responsive te maken,
-            dit omdat het goed is voor mijn ontwikkeling als ik verder wil met frond end development. 
-            * Alle code die ik hiervoor heb gebruikt komt van de site mojo en is dus geen eigen content geweest.
-            </p>
-            <p> Het ging er dan ook om tijdens dit project dat wij coderen meer onder de knie kregen en meer met verschillende selectoren aan de slag konden gaan.</p>
-            <p>
-            Daarnaast hebben wij tijdens dit vak gebruik gemaakt van de screenreader en hoe toegankelijk een website is.
-            </p>
+            <div>
+                <h1>Recreating the mojo website</h1>
+                <img src="images/mojo-landscape.png" alt="Mojo site maar dan lanscape op laptop scherm">
+            </div>
+            <article>
+                <h2>Opdracht</h2> 
+                <p>
+                Voor het vak front end development moesten wij een website uitkiezen en deze zo goed als namaken, er werd van ons verwacht dat wij of de hele site
+                responsive maakte of op gebied van de visuele representatie van de site dingen zouden toevoegen. Ik heb ervoor gekozen om de site responsive te maken,
+                dit omdat het goed is voor mijn ontwikkeling als ik verder wil met frond end development. 
+                * Alle code die ik hiervoor heb gebruikt komt van de site mojo en is dus geen eigen content geweest.
+                </p>
+                <p> Het ging er dan ook om tijdens dit project dat wij coderen meer onder de knie kregen en meer met verschillende selectoren aan de slag konden gaan.</p>
+                <p>
+                Daarnaast hebben wij tijdens dit vak gebruik gemaakt van de screenreader en hoe toegankelijk een website is.
+                </p>
+                
             </article>
         </section>
         <section>
@@ -80,6 +81,7 @@
             <li><a class="linkedinicon" target="_blank" href="https://www.linkedin.com/in/sabrina-z-400316205?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app
                 " rel="https://nl.linkedin.com/"><img src="images/linkedin-icon.png" alt="linkedin icoon"></a></li>
         </ul>
+        <p>Created by: Sabrina Zuurbier</p>
     </footer>
     <script src="script.js"></script>
 </body>
