--- a/pollutionparty.html
+++ b/pollutionparty.html
@@ -44,11 +44,11 @@
                     Elke set heeft zijn eigen plus of min punten, waardoor je de ander een set kan geven die vervuilend is en zij minpunten krijgen. 
                 </p>
          </article>
-         <article>
+         </section>
+         <section>
             <h2>Proces</h2>
             <p>We hebben tijdens het proces veel iteraties gemaakt, we waren bijvoorbeeld in eerste instantie van plan om er een bordspel van te maken,
-                alleen omdat we de link tussen de kaarten en het bord niet goed op orde konden krijgen hebben we het bord weggelaten.
-                Ook hebben we met sprints gewerkt elke week gingen we aan de slag en ontvingen we aan het einde van de week feedback. 
+                alleen omdat we de link tussen de kaarten en het bord niet goed op orde konden krijgen hebben we het bord weggelaten. 
             </p>
             <p>Zo bestond week 1 uit vooronderzoek, week 2 uit prototype, en week 3 de afronding</p>
             <article>
@@ -61,26 +61,31 @@
             </article>
             <article>
                 <h3>Versie 1 + testen</h3>
-                <img src="images/prototype1-test.png" alt="Testen van het eerste spel kaarten">
-                <p>We hadden eerst een low-fidelity kaarten gemaakt, zodat wij ons concept konden gaan testen</p>
-                <p>Hier bleek uit dat de gehele puntentelling nog niet klopte, of je de kaarten meteen op moest leggen, de naam van de kaartset stond er niet op.</p>
-                <p>Dit waren allemaal cruciale inzichten om het spel wel goed te kunnen laten lopen, dus dit hebben we ook meteen opgepakt.</p>
+                <div>
+                    <div>
+                        <p>We hadden eerst een low-fidelity kaarten gemaakt, zodat wij ons concept konden gaan testen</p>
+                        <p>Hier bleek uit dat de gehele puntentelling nog niet klopte, of je de kaarten meteen op moest leggen, de naam van de kaartset stond er niet op.</p>
+                        <p>Dit waren allemaal cru ciale inzichten om het spel wel goed te kunnen laten lopen, dus dit hebben we ook meteen opgepakt.</p> 
+                    </div>
+                    <img src="images/prototype1-test.png" alt="Testen van het eerste spel kaarten">
+                </div>
             </article>
             <article>
                 <h3>Design van de kaarten</h3>
+                <p>Een aantal schetsen om de ideeën die ik had voor de kaarten duidelijk te kunnen aantonen aan mijn groepsgenoten.
+                </p> 
                 <img src="images/schetsen-van-kaarten-versie1.png" alt="Verschillende schetsen van de kaarten">
-                <p>Zodra ons concept in orde was hebben we gebrainstormd over hoe de kaarten vormgegeven moesten worden en hoe de afbeeldingen eruit moesten zien.
-                Voor de kaarten die ik zou gaan illustreren had ik eerst schetsen een paar schetsen vooraf gemaakt.
-                </p>
-                
+                <p>Dit zijn de kaarten uit het spel die ik uiteindelijk heb geillustreerd</p>
                 <img src="images/pollution-2-slides.png" alt="De kaarten die Sabrina heeft geillustreerd">
-                <p>Dit zijn de kaarten uit het spel die ik heb geillustreerd</p>
             </article>
-            <article>
-                <h3>Terugblik</h3>
-                <p>Als ik op dit project terugblik dan heb ik hier veel uit geleerd, zoals een goede taakverdeling hebben in een groep is cruciaal.</p>
-            </article>
-         </article>     
+         <article>
+           <h3>Final product</h3>
+           <div>
+              <img src="images/final-pollutionparty.png" alt="Gemaakte product">
+             <img src="images/laatste-x-testen.png" alt="laatste test">
+           </div>
+           
+         </article>    
        </section>
     </main>
     <footer>
@@ -89,6 +94,7 @@
             <li><a class="linkedinicon" target="_blank" href="https://www.linkedin.com/in/sabrina-z-400316205?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app
                 " rel="https://nl.linkedin.com/"><img src="images/linkedin-icon.png" alt="linkedin icoon"></a></li>
         </ul>
+        <p>Created by: Sabrina Zuurbier</p>
     </footer>
     <script src="script.js"></script>
 </body>
