--- a/mijnprojecten.html
+++ b/mijnprojecten.html
@@ -20,7 +20,7 @@
     <main>
         <section>
           <div>
-           <h1>Mijn projecten</h1>
+           <h1>My projects</h1>
             <p>Een aantal projecten tijdens de opleiding CMD.</p>
           </div>
           <div>
@@ -38,7 +38,7 @@
             <img src="images/mockup-pollutionparty.png" alt="project passie project pollution party">
             <div>
                 <h2>Pollution party</h2>
-                <p>Groepsproject, fysiek product</p>
+                <p>Groepsproject, product design</p>
             </div> 
           </a>
         </article>
@@ -60,6 +60,7 @@
             <li><a class="linkedinicon" target="_blank" href="https://www.linkedin.com/in/sabrina-z-400316205?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app
                 " rel="https://nl.linkedin.com/"><img src="images/linkedin-icon.png" alt="linkedin icoon"></a></li>
         </ul>
+        <p>Created by: Sabrina Zuurbier</p>
     </footer>
 </body>
 </html>
