--- a/zoekeenboek.html
+++ b/zoekeenboek.html
@@ -49,8 +49,7 @@
                     <h3>Stap 2: Structuur maken</h3>
                     <div>
                         <div>
-                            <p>Bij de tweede stap in dit proces was structuur brengen aan het design, dus wat zet ik daar neer en welke gestallt principes ga ik hiervoor gebruiken.
-                                In mijn geval heb ik proximity en consistency gebruikt.
+                            <p>Bij de tweede stap in dit proces was structuur brengen aan het design a.d.h.v. de gestallt principes.
                             </p>
                             <p>Daarentegen zie je ook een ander ontwerp, omdat ik tijdens de tweede stap mij meer ben gaan focussen op welke manier ik het voor de 
                                 jongeren aantrekkelijk kan maken en overzichtelijk. En ik kwam er ook achter dat dat eerste design daar niet geschikt voor was. 
@@ -91,6 +90,7 @@
             <li><a class="linkedinicon" target="_blank" href="https://www.linkedin.com/in/sabrina-z-400316205?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app
                 " rel="https://nl.linkedin.com/"><img src="images/linkedin-icon.png" alt="linkedin icoon"></a></li>
         </ul>
+        <p>Created by: Sabrina Zuurbier</p>
     </footer>
     <script src="script.js"></script>
 </body>
