--- a/pollutionparty.html
+++ b/pollutionparty.html
@@ -47,10 +47,12 @@
          </section>
          <section>
             <h2>Proces</h2>
+            <div>
             <p>We hebben tijdens het proces veel iteraties gemaakt, we waren bijvoorbeeld in eerste instantie van plan om er een bordspel van te maken,
                 alleen omdat we de link tussen de kaarten en het bord niet goed op orde konden krijgen hebben we het bord weggelaten. 
             </p>
             <p>Zo bestond week 1 uit vooronderzoek, week 2 uit prototype, en week 3 de afronding</p>
+            </div>
             <article>
                 <h3>Vooronderzoek</h3>
                 <p>Tijdens deze opdracht hebben we veel vooronderzoek gedaan naar wat voor spelletjes er allemaal zijn en wat maakt het dat zij zo goed zijn. 
