--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
            <a class="linkedinicon" target="_blank" href="https://www.linkedin.com/in/sabrina-z-400316205?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app
                 " rel="https://nl.linkedin.com/"><img src="images/linkedin-icon.png" alt="linkedin icoon"></a>
             <p>Created by: Sabrina Zuurbier</p>
+            <span></span>
     </footer>
 </body>
 </html>
