--- a/mijnprojecten.html
+++ b/mijnprojecten.html
@@ -61,6 +61,7 @@
                 " rel="https://nl.linkedin.com/"><img src="images/linkedin-icon.png" alt="linkedin icoon"></a></li>
         </ul>
         <p>Created by: Sabrina Zuurbier</p>
+        <span></span>
     </footer>
 </body>
 </html>
