--- a/contact.html
+++ b/contact.html
@@ -55,6 +55,7 @@
                 " rel="https://nl.linkedin.com/"><img src="images/linkedin-icon.png" alt="linkedin icoon"></a></li>
         </ul>
         <p>Created by: Sabrina Zuurbier</p>
+        <span></span>
     </footer>
 </body>
 </html>
