--- a/pollutionparty.html
+++ b/pollutionparty.html
@@ -97,6 +97,7 @@
                 " rel="https://nl.linkedin.com/"><img src="images/linkedin-icon.png" alt="linkedin icoon"></a></li>
         </ul>
         <p>Created by: Sabrina Zuurbier</p>
+        <span></span>
     </footer>
     <script src="script.js"></script>
 </body>
