--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                   <img src="images/mockup-pollutionparty.png" alt="project passie project pollution party">
                   <div>
                       <h2>Pollution party</h2>
-                      <p>Groepsproject, fysiek product</p>
+                      <p>Groepsproject, Product design</p>
                   </div> 
                 </a>
               </article>
