--- a/mijnprojecten.html
+++ b/mijnprojecten.html
@@ -23,7 +23,7 @@
            <h1>My projects</h1>
             <p>Een aantal projecten tijdens de opleiding CMD.</p>
           </div>
-          <div>
+          <div class=".projecten">
         <article>
           <a href="zoekeenboek.html">
             <img src="images/mockup-zoekeenboek.png" alt="project zoek een boek afbeelding"> 
