--- a/pollutionparty.html
+++ b/pollutionparty.html
@@ -28,14 +28,16 @@
             <p>Pollution party was ons idee wat onder het vak Passie project viel, waarbij wij al onze kwaliteiten moesten gaan combineren en daar een fysiek product mee maken.
                 Daarbij was het ook de bedoeling om een bepaalde waarde aan toe te voegen en in dit geval was dit voornamelijk ecologische waarde.</p>
             <p>Dit was een project waar wij 3 weken in groepsverband aan hebben gewerkt (4personen).</p>
-            <h3>Mijn taken</h3>
-            <p>Los van de gezamelijke brainstormsessies waren mijn taken:</p>
-            <ul>
-                <li>Illustraties maken voor op de kaarten gemaakt</li>
-                <li>Idee pitchen bij een spel verkoper, voor feedback</li>
-                <li>De spelregels uitschrijven</li>
-                <li>Bijpassende poster maken met de slogan</li>
-            </ul>
+            <article>
+               <h3>Mijn taken</h3>
+                <p>Los van de gezamelijke brainstormsessies waren mijn taken:</p>
+                <ul>
+                    <li>Illustraties maken voor op de kaarten gemaakt</li>
+                    <li>Idee pitchen bij een spel verkoper, voor feedback</li>
+                    <li>De spelregels uitschrijven</li>
+                    <li>Bijpassende poster maken met de slogan</li>
+                </ul> 
+            </article>
          </article>
          <article>
             <h2>Idee</h2>
@@ -62,15 +64,13 @@
                 </p>
             </article>
             <article>
-                <h3>Versie 1 + testen</h3>
-                <div>
                     <div>
+                        <h3>Versie 1 + testen</h3>
                         <p>We hadden eerst een low-fidelity kaarten gemaakt, zodat wij ons concept konden gaan testen</p>
                         <p>Hier bleek uit dat de gehele puntentelling nog niet klopte, of je de kaarten meteen op moest leggen, de naam van de kaartset stond er niet op.</p>
                         <p>Dit waren allemaal cru ciale inzichten om het spel wel goed te kunnen laten lopen, dus dit hebben we ook meteen opgepakt.</p> 
                     </div>
                     <img src="images/prototype1-test.png" alt="Testen van het eerste spel kaarten">
-                </div>
             </article>
             <article>
                 <h3>Design van de kaarten</h3>
