--- a/contact.html
+++ b/contact.html
@@ -24,10 +24,10 @@
                 <h1>Hi, ik ben Sabrina Zuurbier</h1>
                 <p>21 jaar</p>
                 <div>
-                     <p> Ik zal mijzelf omschrijven als een leergierig, ambiteus en iemand die initiatief zal nemen. Ik vind het leuk om dingen uit te proberen en meer te leren</p>
+                     <p> Ik zal mijzelf omschrijven als een leergierig, ambiteus en oplossingsgericht. Ik vind het leuk om dingen uit te proberen en meer te leren.</p>
                     <p> Voor mijn tweede jaar ben ik opzoek naar een stage van tien weken. Bij een bedrijf dat mij een mogelijkheid kan bieden om mij verder te helpen ontwikkelen met coderen, maar ook op visueel vlak.
-                    Graag zoek ik een plek die mij deze begeleiding kan bieden en natuurlijk een gezellige sfeer heeft.</p>
-                     <p>Zelf ben ik graag bezig met mijn handen en vind ik het ontzettend leuk om te tekenen en te schilderen met aquarel verf. Ook probeer ik mij verder te ontwikkelen op het gebied van fotografie en loop daarom ook regelmatig met 
+                    Graag zoek ik een plek met iemand die mij hier begeleiding in kan bieden en natuurlijk een gezellige sfeer heeft.</p>
+                     <p>Zelf ben ik graag creatief bezig en vind ik het ontzettend leuk om te tekenen en te schilderen met aquarel verf. Ook probeer ik mij verder te ontwikkelen op het gebied van fotografie en loop daarom ook regelmatig met 
                     een professionele fotograaf mee.
                     </p>   
                 </div>
