--- a/pollutionparty.html
+++ b/pollutionparty.html
@@ -27,7 +27,7 @@
             <h2>Opdracht</h2>
             <p>Pollution party was ons idee wat onder het vak Passie project viel, waarbij wij al onze kwaliteiten moesten gaan combineren en daar een fysiek product mee maken.
                 Daarbij was het ook de bedoeling om een bepaalde waarde aan toe te voegen en in dit geval was dit voornamelijk ecologische waarde.</p>
-            <p>Dit was een project waar wij 3 weken in groepsverband aan hebben gewerkt (4personen).</p>
+            <p>Dit was een project waar wij <strong> 3 weken in groepsverband </strong> aan hebben gewerkt (4personen).</p>
             <article>
                <h3>Mijn taken</h3>
                 <p>Los van de gezamelijke brainstormsessies waren mijn taken:</p>
@@ -53,7 +53,7 @@
             <p>We hebben tijdens het proces veel iteraties gemaakt, we waren bijvoorbeeld in eerste instantie van plan om er een bordspel van te maken,
                 alleen omdat we de link tussen de kaarten en het bord niet goed op orde konden krijgen hebben we het bord weggelaten. 
             </p>
-            <p>Zo bestond week 1 uit vooronderzoek, week 2 uit prototype, en week 3 de afronding</p>
+            <p>Het project bestond uit <strong>sprints</strong>. Zo bestond week 1 uit vooronderzoek, week 2 uit prototype en testen, en week 3 de afronding</p>
             </div>
             <article>
                 <h3>Vooronderzoek</h3>
@@ -76,17 +76,19 @@
                 <h3>Design van de kaarten</h3>
                 <p>Een aantal schetsen om de ideeën die ik had voor de kaarten duidelijk te kunnen aantonen aan mijn groepsgenoten.
                 </p> 
-                <img src="images/schetsen-van-kaarten-versie1.png" alt="Verschillende schetsen van de kaarten">
-                <p>Dit zijn de kaarten uit het spel die ik uiteindelijk heb geillustreerd</p>
-                <img src="images/pollution-2-slides.png" alt="De kaarten die Sabrina heeft geillustreerd">
+                <div>
+                    <img src="images/schetsen-van-kaarten-versie1.png" alt="Verschillende schetsen van de kaarten">
+                    <p>Dit zijn de kaarten uit het spel die ik uiteindelijk heb geillustreerd</p>
+                    <img src="images/pollution-2-slides.png" alt="De kaarten die Sabrina heeft geillustreerd">  
+                </div>
             </article>
          <article>
            <h3>Final product</h3>
+           <p>Uiteindelijk hebben we het gehele project afgesloten met een markt waarin je voor een laatste keer je gemaakte product kon gaan testen.</p>
            <div>
               <img src="images/final-pollutionparty.png" alt="Gemaakte product">
              <img src="images/laatste-x-testen.png" alt="laatste test">
            </div>
-           
          </article>    
        </section>
     </main>
