--- a/contact.html
+++ b/contact.html
@@ -49,12 +49,14 @@
         </section>  -->
     </main>
     <footer>
-        <ul>
-            <!-- Target zorgt ervoor dat er een nieuwe window geopent word -->
-            <li><a class="linkedinicon" target="_blank" href="https://www.linkedin.com/in/sabrina-z-400316205?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app
-                " rel="https://nl.linkedin.com/"><img src="images/linkedin-icon.png" alt="linkedin icoon"></a></li>
-        </ul>
-        <p>Created by: Sabrina Zuurbier</p>
+        <div>
+                <!-- Target zorgt ervoor dat er een nieuwe window geopent word -->
+            <a class="linkedinicon" target="_blank" href="https://www.linkedin.com/in/sabrina-z-400316205?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app
+                " rel="https://nl.linkedin.com/"><img src="images/linkedin-icon.png" alt="linkedin icoon"></a>
+
+            <p>Created by: Sabrina Zuurbier</p>
+        </div>
+
         <span></span>
     </footer>
 </body>
