--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
                       <li><img src="images/github-mark.png" alt="Het logo van github"></li>
                     <!--Logo van figma van: https://www.figma.com/community/file/1252952214981489076 -->
                     <li><img src="images/figma-logo.png" alt="Het logo van figma"></li>
+                    <!-- https://cdn.pixabay.com/photo/2021/02/03/12/28/adobe-illustrator-5977785_960_720.png -->
+                    <li><img src="images/adobe-illustrator-logo.png" alt="logo van illustrator"></li>
                 </ul>
                 <article>
                     <h2>Meer over mij en wat zoek ik?</h2>
@@ -73,16 +75,15 @@
         </section>
     </main>
     <footer>
-        <!-- <ul>
-            <li><a href="index.html"></a>Homepage</li>
-            <li><a href="contact.html"></a>About me</li>
-            <li><a href="mijnprojecten.html"></a>Projecten</li>
-        </ul> -->
-            <!-- Target zorgt ervoor dat er een nieuwe window geopent word -->
-           <a class="linkedinicon" target="_blank" href="https://www.linkedin.com/in/sabrina-z-400316205?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app
-                " rel="https://nl.linkedin.com/"><img src="images/linkedin-icon.png" alt="linkedin icoon"></a>
-            <p>Created by: Sabrina Zuurbier</p>
-            <span></span>
-    </footer>
+      <div>
+              <!-- Target zorgt ervoor dat er een nieuwe window geopent word -->
+          <a class="linkedinicon" target="_blank" href="https://www.linkedin.com/in/sabrina-z-400316205?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app
+              " rel="https://nl.linkedin.com/"><img src="images/linkedin-icon.png" alt="linkedin icoon"></a>
+
+          <p>Created by: Sabrina Zuurbier</p>
+      </div>
+
+      <span></span>
+  </footer>
 </body>
 </html>
