--- a/zoekeenboek.html
+++ b/zoekeenboek.html
@@ -84,13 +84,15 @@
         </section>
             <!-- <a href="http://www.freepik.com">Designed by Cosmo-Studio / Freepik</a> -->
      </main>       
-    <footer>
-        <ul>
-            <!-- Target zorgt ervoor dat er een nieuwe window geopent word -->
-            <li><a class="linkedinicon" target="_blank" href="https://www.linkedin.com/in/sabrina-z-400316205?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app
-                " rel="https://nl.linkedin.com/"><img src="images/linkedin-icon.png" alt="linkedin icoon"></a></li>
-        </ul>
-        <p>Created by: Sabrina Zuurbier</p>
+     <footer>
+        <div>
+                <!-- Target zorgt ervoor dat er een nieuwe window geopent word -->
+            <a class="linkedinicon" target="_blank" href="https://www.linkedin.com/in/sabrina-z-400316205?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app
+                " rel="https://nl.linkedin.com/"><img src="images/linkedin-icon.png" alt="linkedin icoon"></a>
+
+            <p>Created by: Sabrina Zuurbier</p>
+        </div>
+
         <span></span>
     </footer>
     <script src="script.js"></script>
