--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div>
                  <h1> Hi! Ik ben Sabrina Zuurbier </h1> 
                 <p>Tweedejaars student CMD.</p>
-                <a href="mijnprojecten.html">Projects</a>
+                <a href="mijnprojecten.html">Projecten</a>
                 <ul>
                     <!--logo van vscode: https://code.visualstudio.com/brand -->
                     <li><img src="images/vscode.png" alt="Logo van vscode"> </li>
