--- a/pollutionparty.html
+++ b/pollutionparty.html
@@ -68,7 +68,7 @@
                         <h3>Versie 1 + testen</h3>
                         <p>We hadden eerst een low-fidelity kaarten gemaakt, zodat wij ons concept konden gaan testen</p>
                         <p>Hier bleek uit dat de gehele puntentelling nog niet klopte, of je de kaarten meteen op moest leggen, de naam van de kaartset stond er niet op.</p>
-                        <p>Dit waren allemaal cru ciale inzichten om het spel wel goed te kunnen laten lopen, dus dit hebben we ook meteen opgepakt.</p> 
+                        <p>Dit waren allemaal cruciale inzichten om het spel wel goed te kunnen laten lopen.</p> 
                     </div>
                     <img src="images/prototype1-test.png" alt="Testen van het eerste spel kaarten">
             </article>
