--- a/zoekeenboek.html
+++ b/zoekeenboek.html
@@ -25,10 +25,10 @@
              </div>
             <article>
                     <h2>Opdracht</h2>
-                    <p>Dit was een opdracht van 5 weken individueel.</p>
                     <p> Tijdens dit project werden wij uitgedaagd om de stijlen van de Amsterdamse website en de bibliotheek te combineren. Wij moesten op een leuke manier jongeren in de onderbouw van de middelbare school 
                         aansporen/ helpen bij het kiezen van een leesboek.  
                     </p> 
+                    <p>Dit was een schoolopdracht van  <strong>5 weken individueel</strong>.</p>
             </article>
         </section>
         <section>
@@ -73,6 +73,7 @@
                          <p>Daarna heb ik nog een aantal varianten gemaakt met verschillende stijlen, om zo te kunnen kijken welke het beste zou zijn voor mijn
                         design.
                         </p> 
+                        <p>Uiteindelijk heeft dit mij ontzettend veel inzage gegeven in hoe erg van belang het is om te blijven itereren, om zo tot het gewenste doel te komen.</p>
                     </div>
                     <img src="images/zoekeenboek-comp-typo-kleuren.png" alt="Verschillende varianten van een bepaalde pagina">
                 </article>
