--- a/mijnprojecten.html
+++ b/mijnprojecten.html
@@ -20,7 +20,7 @@
     <main>
         <section>
           <div>
-           <h1>My projects</h1>
+           <h1>Mijn projecten</h1>
             <p>Een aantal projecten tijdens de opleiding CMD.</p>
           </div>
           <div class=".projecten">
