--- a/mojo.html
+++ b/mojo.html
@@ -24,27 +24,32 @@
                 <img src="images/mojo-landscape.png" alt="Mojo site maar dan lanscape op laptop scherm">
             </div>
             <article>
+                <h2>Informatie</h2>
+                <p>Mijn rol: Frond end developer</p>
+                <p>Individuele opdracht</p>
+                <p>Duur: periode van 3 weken</p>
+                <p>Vak: Frond end development, leerjaar 2 CMD</p>
+            </article>
+            <article>
                 <h2>Opdracht</h2> 
                 <p>
-                Voor het vak front end development moesten wij een website uitkiezen en deze zo goed als namaken, er werd van ons verwacht dat wij of de hele site
-                responsive maakte of op gebied van de visuele representatie van de site dingen zouden toevoegen. Ik heb ervoor gekozen om de site responsive te maken,
-                dit omdat het goed is voor mijn ontwikkeling als ik verder wil met frond end development. 
-                * Alle code die ik hiervoor heb gebruikt komt van de site mojo en is dus geen eigen content geweest.
+                Voor het vak front end development moesten wij een bestaande website zo goed mogelijk proberen na te maken. Waarvoor ik de website van Mojo had gekozen.
                 </p>
+                <p> Alle content die ik hiervoor heb gebruikt komt van de site mojo en is dus geen eigen content geweest.</p>
                 <p> Het ging er dan ook om tijdens dit project dat wij coderen meer onder de knie kregen en meer met verschillende selectoren aan de slag konden gaan.</p>
                 <p>
-                Daarnaast hebben wij tijdens dit vak gebruik gemaakt van de screenreader en hoe toegankelijk een website is.
+                Daarnaast hebben wij tijdens dit vak gebruik gemaakt van de screenreader en leren begrijpen wat het belang is van toegankelijkheid in een website.
                 </p>
-                
+            </article>
+            <article>
+                <h2>Doel</h2>
+                <p>Het doel was om twee verschillende pagina's uit te werken uit nette html, css en javascript. Met daarbij een extra uitwerking tot een responsive design.</p>
             </article>
         </section>
         <section>
             <article>
                 <h2>Proces</h2>
-                <p>
-                Het lastigste vond ik dat zodra er een fout in de code staat of je wilde iets veranderen, maar dat dat niet meteen werkte. Ik moet mij daar nog een weg in vinden en
-                natuurlijk veel oefenen door code te blijven schrijven, zodat ik er bekender in word.
-                </p>
+                <p>We hebben tijdens dit project veel gefocust op het onder de knie krijgen van de code. Daarbij hebben wij gebruik gemaakt van een breakdownschets en het maken van opdrachten via codepen. </p>
                 <article>
                         <img src="images/breakdownschets.jpg" alt="Afbeelding van een aantal delen van de breakdownschets">
                     <div>
@@ -62,9 +67,9 @@
                         </div>
                         <video autoplay loop src="images/java-codepenopdracht.mp4" type="video/mp4"></video>
                 </article>
-                <article>
-
-                </article>
+                <p>
+                    Het lastigste vond ik tijdens dit project dat zodra er een fout in de code staat dat je soms langer bezig bent om deze fout te vinden, maar gelukkig bestaan hier tegenwoordig steeds meer tools voor die je daarvoor kan gebruiken.
+                 </p>
             </article>     
        </section>
         <section>
