--- a/pollutionparty.html
+++ b/pollutionparty.html
@@ -23,20 +23,32 @@
             <h1>Pollutionparty</h1>
          <img src="images/pollution-party.png" alt="Afbeelding van reclame van het spel">
         </div>
-         <article>
-            <h2>Opdracht</h2>
-            <p>Pollution party was ons idee wat onder het vak Passie project viel, waarbij wij al onze kwaliteiten moesten gaan combineren en daar een fysiek product mee maken.
-                Daarbij was het ook de bedoeling om een bepaalde waarde aan toe te voegen en in dit geval was dit voornamelijk ecologische waarde.</p>
-            <p>Dit was een project waar wij <strong> 3 weken in groepsverband </strong> aan hebben gewerkt (4personen).</p>
+        <div>
             <article>
-               <h3>Mijn taken</h3>
-                <p>Los van de gezamelijke brainstormsessies waren mijn taken:</p>
-                <ul>
-                    <li>Illustraties maken voor op de kaarten gemaakt</li>
-                    <li>Idee pitchen bij een spel verkoper, voor feedback</li>
-                    <li>De spelregels uitschrijven</li>
-                    <li>Bijpassende poster maken met de slogan</li>
-                </ul> 
+                <h2>Informatie</h2>
+                <p>Mijn rol: Visual designer</p>
+                <p>Groepsproject, 4 personen</p>
+                <p>Duur: periode van 3 weken</p>
+                <p>Vak: Passie project, leerjaar 1 CMD</p>
+            </article>
+            <article>
+                <h2>Mijn taken</h2>
+                 <p>Los van de gezamelijke brainstormsessies waren mijn taken:</p>
+                 <ul>
+                     <li>Illustraties maken voor op de kaarten gemaakt</li>
+                     <li>Idee pitchen bij een spel verkoper, voor feedback</li>
+                     <li>De spelregels uitschrijven</li>
+                     <li>Bijpassende poster maken met de slogan</li>
+                 </ul> 
+             </article>
+        </div>
+            <article>
+                <h2>Opdracht</h2>
+                <p>De opdracht van dit project was om een product of ervaring te maken en ontwerpen die van toegveoegde waarde is voor de wereld.</p>
+            </article>
+            <article>
+                <h2>Doel</h2>
+                <p>Het doel van onze groep was om een spel te creeëren wat mensen zich bewust maakt van vervuiling en andere ecologische waarden.</p>
             </article>
          </article>
          <article>
