--- a/zoekeenboek.html
+++ b/zoekeenboek.html
@@ -23,22 +23,29 @@
             <h1>Zoek een boek</h1>
             <img src="images/zoek-een-boek.png" alt="Afbeelding van het eerste scherm van Zoek een boek, met een aantal boeken en een plant"> 
              </div>
+             <article>
+                <h2>Informatie</h2>
+                <p>Mijn rol: Visual interface designer</p>
+                <p>Individueel project</p>
+                <p>Duur: periode van 5 weken</p>
+                <p>Vak: Visual interface design, opdracht boekenzoeker,leerjaar 1 CMD</p>
+             </article>
             <article>
                     <h2>Opdracht</h2>
-                    <p> Tijdens dit project werden wij uitgedaagd om de stijlen van de Amsterdamse website en de bibliotheek te combineren. Wij moesten op een leuke manier jongeren in de onderbouw van de middelbare school 
+                    <p> Tijdens dit project was het doel om aan de hand van de stijl van de Amsterdamse gemeente een visueel aantrekkelijke boekenzoeker maken voor kinderen voor de school bibliotheek . Wij moesten op een leuke manier jongeren in de onderbouw van de middelbare school 
                         aansporen/ helpen bij het kiezen van een leesboek.  
                     </p> 
-                    <p>Dit was een schoolopdracht van  <strong>5 weken individueel</strong>.</p>
+            </article>
+            <article>
+                <h2>Doel</h2>
+                <p>Een duidelijker en aantrekkelijke interface voor ipad te creeëren, waarbij jongeren een overzicht krijgen van aantrekkelijke boeken om te lezen. </p>
             </article>
         </section>
         <section>
             <article>
                 <div>
                 <h2>Proces</h2>
-                 <p>Dit ging niet zonder slag of stoot, omdat het visuele beeld van Amsterdam best wel clean en recht toe recht aan is, had ik in eerste
-                    instantie moeite met het aantrekkelijk maken voor kinderen. Uiteindelijk door feedback te vragen aan andere heb ik veel dingen uitgeprobeerd,
-                    waarvan dit design het beste werkte. 
-                </p>
+                <p>De site van gemeente Amsterdamse hanteert een eigen stijlgids. Deze is clean en dit heb ik ook door proberen te laten komen in het design. Door niet al te veel extra's toe te voegen, maar dit alleen te doen om een goede hiërarchie te creeëren en het daarnaast voor de doelgroep aantrekkelijk te maken.</p>
                 </div>
                 <article>
                         <img src="images/zoekeenboek-indeling.png" alt="Indeling alle content lo-fi">
@@ -61,9 +68,8 @@
                 <article>
                     <img src="images/zoekeenboek-hierarchie.png" alt="Hierarchie in de lo-fi">
                     <div>
-                        <h3>Stap 3: Hierarchie aanbrengen</h3>
-                         <p>Zoals je kan zien heb ik verschillende elementen toegvoegd, zoals het figuurtje dat lijkt op een ei. Deze kijkt met zijn ogen de richting
-                        op waar de gebruiker naartoe moet kijken. Alleen dit was uiteindelijk nog niet genoeg, dus heb ik het bij het eind design wat duidelijker vormgegeven.
+                        <h3>Stap 3: hiërarchie aanbrengen</h3>
+                         <p>Zoals je kan zien heb ik verschillende elementen toegvoegd, zoals het figuurtje. Doordat deze met zijn ogen een bepaalde kant op kijkt wordt de aandacht van de gebruiker daar ook naartoe gestuurd, dus heb ik het bij het eind design wat duidelijker vormgegeven.
                           </p> 
                     </div>
                 </article>
